# FJP_SP

./: .gitignore  CMakeLists.txt  code_block.cpp  code_block.h  file.cpp  file.h  grammar.y  main.cpp  method.cpp  method.h  pl0_utils.h  readme.md  struct.cpp  struct.h  synt_tree.cpp  synt_tree.h  token.l  value.cpp  value.h
doc/: dokumentace.tex
examples/: constAssignErrorExample.stpd  dummer.stpd  factorialExample.stpd  functionExample.stpd  ifExample.stpd  in.stpd  loopsExample.stpd  multiAssign.stpd  printExample.stpd  structExample.stpd  syntaxError.stpd  ternaryExample.stpd
